--- a/templates/config_ldif.erb
+++ b/templates/config_ldif.erb
@@ -24,7 +24,7 @@ objectclass: top
 objectclass: ads-base
 objectclass: ads-directoryService
 ads-servers: ldapServer
-ads-dsreplicaid: 1
+ads-dsreplicaid: <%= replica_id %>
 ads-directoryserviceid: default
 ads-dsmaxpdusize: 2000000
 ads-dsaccesscontrolenabled: FALSE
@@ -579,7 +579,10 @@ ads-extendedophandlers: gracefulShutdownHandler
 ads-extendedophandlers: starttlshandler
 ads-extendedophandlers: storedprochandler
 ads-saslhost: ldap.example.com
-modifiersname: 0.9.2342.19200300.100.1.1=admin,2.5.4.11=system
+<% unless jks == '' -%>
+  <%= "ads-keystoreFile: #{jks}" %>
+  <%= "ads-certificatePassword: #{jks_pw}" %>
+<% end -%>
 
 dn: ou=replConsumers,ads-serverId=ldapServer,ou=servers,ads-directoryServiceId=default,ou=config
 ou: replConsumers
